--- a/about.html
+++ b/about.html
@@ -5,13 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
     <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <img id="banner" src="assets/images/banner.png" alt="picture of banner">
+    </div>
+    
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>La Paz, Murillo, Bolivia</li>
+            <li>Trinidad, Beni, Bolivia</li>
+            <li>Cobija, Pando, Bolivia</li>
+            <li>Chiquitos, Santa Cruz, Bolivia</li>
+        </ul>
+        <h2>Origin</h2>
+        <img src="assets/images/about.jpg" alt="about picture">
+        <p>Thank you for eating at our restaurant. Our main location is in La Paz. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     </main>
 </body>
 </html>
