--- a/index.html
+++ b/index.html
@@ -10,9 +10,41 @@
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
     <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <img id="banner" src="assets/images/banner.png" alt="picture of banner">
+    </div>
+
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <h2>We'll format your meal times</h2>
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class="service">
+            <h3>Take out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+        <h2>Come out and join for a good meal</h2>
+        <img src="assets/images/table-in-restaurant.jpg" alt="Table in Restaurant">
+         
     </main>
 </body>
 </html>
